<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:papersleep="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".practice.FightIt"
    android:background="@drawable/lights"
    android:padding="0dp" android:orientation="vertical">

    <com.example.papersleep.machinelearningtutorial.not_activity.MyActionBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.example.papersleep.machinelearningtutorial.not_activity.MyButton
            android:id="@+id/ally"
            android:text="@string/ally"

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="Microsoft YaHei"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:padding="5dp"
            papersleep:backColor="#304090"
            papersleep:backColorPress="#6090d0"
            papersleep:fillet="true"
            papersleep:radius="30"
            papersleep:textColor="@android:color/white"
        />

        <com.example.papersleep.machinelearningtutorial.not_activity.MyButton
            android:id="@+id/betray"
            android:text="@string/betray"

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="Microsoft YaHei"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:padding="5dp"
            papersleep:backColor="#304090"
            papersleep:backColorPress="#6090d0"
            papersleep:fillet="true"
            papersleep:radius="30"
            papersleep:textColor="@android:color/white"
        />

    </LinearLayout>

    <com.example.papersleep.machinelearningtutorial.not_activity.MyButton
        android:id="@+id/to_end"
        android:text="@string/to_end"
        android:visibility="gone"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:fontFamily="Microsoft YaHei"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:padding="5dp"
        papersleep:backColor="#304090"
        papersleep:backColorPress="#6090d0"
        papersleep:fillet="true"
        papersleep:radius="30"
        papersleep:textColor="@android:color/white"
    />

</LinearLayout>