<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:papersleep="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".practice.EndingAndSearching"
    android:background="@drawable/lights"
    android:backgroundTint="#1b1b1b"
    android:padding="0dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="96dp"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="40dp"
                    android:lineSpacingMultiplier="1.4"
                    android:text="先完成一个问卷..."
                    android:textColor="#FFFFFF"
                    android:textSize="28dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:lineSpacingMultiplier="1.4"
                    android:text="@string/inquiry1"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"/>
                <RadioGroup
                    android:id="@+id/question1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/ally1"
                        android:text="@string/ally"
                        android:background="@drawable/radiobutton_background"
                        android:button="@null"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:fontFamily="Microsoft YaHei"
                        android:textSize="22sp"
                        android:textAllCaps="false"
                        android:padding="5dp"
                    />

                    <RadioButton
                        android:id="@+id/betray1"
                        android:text="@string/betray"
                        android:background="@drawable/radiobutton_background"
                        android:button="@null"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:fontFamily="Microsoft YaHei"
                        android:textSize="22sp"
                        android:textAllCaps="false"
                        android:padding="5dp"
                    />
                </RadioGroup>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:lineSpacingMultiplier="1.4"
                    android:text="@string/inquiry2"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"/>
                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/ally2"
                        android:text="@string/ally"
                        android:background="@drawable/radiobutton_background"
                        android:button="@null"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:fontFamily="Microsoft YaHei"
                        android:textSize="22sp"
                        android:textAllCaps="false"
                        android:padding="5dp"
                    />

                    <RadioButton
                        android:id="@+id/betray2"
                        android:text="@string/betray"
                        android:background="@drawable/radiobutton_background"
                        android:button="@null"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:fontFamily="Microsoft YaHei"
                        android:textSize="22sp"
                        android:textAllCaps="false"
                        android:padding="5dp"
                    />
                </RadioGroup>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:lineSpacingMultiplier="1.4"
                    android:text="@string/inquiry3"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/ally3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/radiobutton_background"
                        android:button="@null"
                        android:fontFamily="Microsoft YaHei"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/ally"
                        android:textAllCaps="false"
                        android:textSize="22sp"
                        android:textStyle="bold"/>

                    <RadioButton
                        android:id="@+id/betray3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/radiobutton_background"
                        android:button="@null"
                        android:fontFamily="Microsoft YaHei"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/betray"
                        android:textAllCaps="false"
                        android:textSize="22sp"
                        android:textStyle="bold"/>
                </RadioGroup>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:lineSpacingMultiplier="1.4"
                    android:text="@string/inquiry4"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"/>
                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/ally4"
                        android:text="@string/ally"
                        android:background="@drawable/radiobutton_background"
                        android:button="@null"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:fontFamily="Microsoft YaHei"
                        android:textSize="22sp"
                        android:textAllCaps="false"
                        android:padding="5dp"
                    />

                    <RadioButton
                        android:id="@+id/betray4"
                        android:text="@string/betray"
                        android:background="@drawable/radiobutton_background"
                        android:button="@null"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:fontFamily="Microsoft YaHei"
                        android:textSize="22sp"
                        android:textAllCaps="false"
                        android:padding="5dp"
                    />
                </RadioGroup>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:lineSpacingMultiplier="1.4"
                    android:text="@string/inquiry5"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"/>
                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton

                        android:id="@+id/ally5"
                        android:text="@string/ally"
                        android:background="@drawable/radiobutton_background"
                        android:button="@null"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:fontFamily="Microsoft YaHei"
                        android:textSize="22sp"
                        android:textAllCaps="false"
                        android:padding="5dp"
                    />

                    <RadioButton
                        android:id="@+id/betray5"
                        android:text="@string/betray"
                        android:background="@drawable/radiobutton_background"
                        android:button="@null"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:fontFamily="Microsoft YaHei"
                        android:textSize="22sp"
                        android:textAllCaps="false"
                        android:padding="5dp"
                    />
                </RadioGroup>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.example.papersleep.machinelearningtutorial.not_activity.MyButton
                        android:id="@+id/to_gene"
                        android:text="@string/to_end"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="20dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:fontFamily="Microsoft YaHei"
                        android:textSize="22sp"
                        android:textAllCaps="false"
                        android:padding="5dp"
                        papersleep:backColor="#304090"
                        papersleep:backColorPress="#6090d0"
                        papersleep:fillet="true"
                        papersleep:radius="30"
                        papersleep:textColor="@android:color/white"
                    />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</LinearLayout>
