<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:papersleep="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tutorial.FightIt"
    android:background="@drawable/lights"
    android:backgroundTint="#1b1b1b"
    android:padding="0dp" android:orientation="vertical">

    <com.example.papersleep.machinelearningtutorial.not_activity.MyActionBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/opponent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/big_white"
                android:layout_margin="20dp"/>

            <TextView
                android:id="@+id/opponent_s"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:layout_margin="20dp"
                android:textSize="24sp"
                android:textColor="#ffffff"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/score_table"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/your_c"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0"/>

            <ImageView
                android:id="@+id/com_res"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"/>

            <!--<pl.droidsonroids.gif.GifImageView-->
            <!--android:id="@+id/b_ling"-->
            <!--android:visibility="gone"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="5"-->
            <!--android:src="@drawable/d_big_white"-->
            <!--/>-->

            <TextView
                android:id="@+id/final_res"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="#ffffff"
                />


            <ImageView
                android:id="@+id/its_c"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/you"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/big_white"
                android:layout_margin="20dp"
                />

            <TextView
                android:id="@+id/your_s"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:layout_margin="20dp"
                android:textSize="24sp"
                android:textColor="#ffffff"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.example.papersleep.machinelearningtutorial.not_activity.MyButton
            android:id="@+id/ally"
            android:text="@string/ally"

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="Microsoft YaHei"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:padding="5dp"
            papersleep:backColor="#304090"
            papersleep:backColorPress="#6090d0"
            papersleep:fillet="true"
            papersleep:radius="30"
            papersleep:textColor="@android:color/white"
            />

        <com.example.papersleep.machinelearningtutorial.not_activity.MyButton
            android:id="@+id/betray"
            android:text="@string/betray"

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="Microsoft YaHei"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:padding="5dp"
            papersleep:backColor="#304090"
            papersleep:backColorPress="#6090d0"
            papersleep:fillet="true"
            papersleep:radius="30"
            papersleep:textColor="@android:color/white"
            />

        <com.example.papersleep.machinelearningtutorial.not_activity.MyButton
            android:id="@+id/to_gene"
            android:text="@string/to_end"
            android:visibility="gone"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="Microsoft YaHei"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:padding="5dp"
            papersleep:backColor="#304090"
            papersleep:backColorPress="#6090d0"
            papersleep:fillet="true"
            papersleep:radius="30"
            papersleep:textColor="@android:color/white"
            />

    </LinearLayout>


</LinearLayout>